# ResolutionSwitcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.spec  lint.sh  mise.toml  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml
.github/workflows/: build.yml
.mise/tasks/: lint.bat
scripts/: lint.sh
src/: build.spec  custom_types.py  display_adapters.py  display_monitors.py  main.py  requirements.txt  windows_types.py
src/resolution_switcher/: __init__.py  __main__.py  cli.py  custom_types.py  display_adapters.py  display_monitors.py  windows_types.py
