[build-system]
requires = ["setuptools>=69.5.1,<77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ResolutionSwitcher"
version = "3.0.3"
description = "Command line tool to change Windows display settings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andre Bocchini"}
]
keywords = ["windows", "display", "resolution", "hdr", "cli"]

dependencies = [
    "colorama==0.4.6",
    "termcolor==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.7.0",
    "pyinstaller==6.6.0",
    "pyinstaller-hooks-contrib==2024.4",
]
build = [
    "pywin32==306",
    "pywin32-ctypes==0.2.2",
]
lint = [
    "ruff==0.14.10",
    "pyright==1.1.407",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["resolution_switcher"]

[project.scripts]
resolution-switcher = "resolution_switcher.cli:main"

[tool.setuptools.package-data]
"*" = ["LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["src"]
reportArgumentType = "warning"
reportAssignmentType = "warning"
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportGeneralTypeIssues = "error"
reportMissingImports = "error"